[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background_gradient.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/background_pattern.tex" type="Texture" id=3]
[ext_resource path="res://assets/fonts/chunq_85.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/textures/logo.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/btn_start_normal.tex" type="Texture" id=6]
[ext_resource path="res://assets/textures/btn_start_pressed.tex" type="Texture" id=7]
[ext_resource path="res://assets/textures/btn_instructions_normal.tex" type="Texture" id=8]
[ext_resource path="res://assets/textures/btn_instructions_pressed.tex" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("buttons/btn_instructions:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.5, 0.7 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 2240 ), Vector2( 0, 1560 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("buttons/btn_start:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.4, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 1960 ), Vector2( 0, 1280 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("logo:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.1, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.8 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"intro_anim_stopped" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("lbl_highscore:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.2, 0.4 ), "transitions":FloatArray( 1, 0.25 ), "update":0, "values":[ Vector2( 0, 320 ), Vector2( 0, 540 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("lbl_highscore:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0.2, 0.4 ), "transitions":FloatArray( 1, 0.25 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("logo:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2.1, 2.3, 2.5 ), "transitions":FloatArray( 1, 1, 4, 4 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ] }

[node name="menu" type="Node"]

script/script = ExtResource( 1 )

[node name="gradient" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="lbl_highscore" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 540.0
margin/right = 1080.0
margin/bottom = 700.0
custom_fonts/font = ExtResource( 4 )
text = "best: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="logo" type="Sprite" parent="."]

transform/pos = Vector2( 542, 382 )
texture = ExtResource( 5 )

[node name="buttons" type="Node2D" parent="."]

[node name="btn_start" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1280.0
margin/right = 1080.0
margin/bottom = 1498.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )

[node name="btn_instructions" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1560.0
margin/right = 1080.0
margin/bottom = 1818.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
anims/logo_bounce = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null

[connection signal="pressed" from="buttons/btn_start" to="." method="_on_btn_start_pressed"]

[connection signal="pressed" from="buttons/btn_instructions" to="." method="_on_btn_instructions_pressed"]


